--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,17 +1,23 @@
-en:
+--- 
+en: 
   contact: 
-    contact_us: 'Contact Us'
-    name: 'Your name:'
-    name_help: 'Please provide us with your name.'
-    phone: 'Your phone number:'
-    phone_help: 'Your phone number is optional but will help us contact you if necessary.'
-    email: 'Your email:'
-    email_help: 'Please provide us with your email so that we can contact you if necessary.'
-    subject: 'Subject:'
-    subject_help: 'A simple statement indicating the nature of your feedback.'
-    question: 'Your message/question:'
-    question_help: 'Please include any comments you would like us to hear.'
-    contact_response_subject: 'Thanks for your inquiry from {{application_name}}!'
-  general:
-    thank_you_contact: 'Thank you for your message.  A member of our team will respond to you shortly.'
-    send: 'Send'
+    name: "Your name:"
+    subject_help: A simple statement indicating the nature of your feedback.
+    name_help: Please provide us with your name.
+    email_help: Please provide us with your email so that we can contact you if necessary.
+    contact_response_subject: Thanks for your inquiry from {{application_name}}!
+    subject: "Subject:"
+    question_help: Please include any comments you would like us to hear.
+    contact_us: Contact Us
+    phone: "Your phone number:"
+    phone_help: Your phone number is optional but will help us contact you if necessary.
+    question: "Your message/question:"
+    email: "Your email:"
+  projects: 
+    title: Title
+    description: Description
+    create_problem: There was a problem creating a new re-enactment
+    edit_problem: There was a problem editing this re-enactment
+  general: 
+    thank_you_contact: Thank you for your message.  A member of our team will respond to you shortly.
+    send: Send
