--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,23 +1,33 @@
 --- 
 en: 
+  characters: 
+    title: Title
+    create_problem: There was a problem creating the new character
+    description: Description
+    edit_problem: There was a problem editing this character
   contact: 
-    name: "Your name:"
     subject_help: A simple statement indicating the nature of your feedback.
+    name: "Your name:"
     name_help: Please provide us with your name.
+    contact_response_subject: "Thanks for your inquiry from %{application_name}!"
     email_help: Please provide us with your email so that we can contact you if necessary.
-    contact_response_subject: Thanks for your inquiry from {{application_name}}!
     subject: "Subject:"
     question_help: Please include any comments you would like us to hear.
-    contact_us: Contact Us
-    phone: "Your phone number:"
     phone_help: Your phone number is optional but will help us contact you if necessary.
+    phone: "Your phone number:"
+    contact_us: Contact Us
     question: "Your message/question:"
     email: "Your email:"
   projects: 
+    add: (Add)
+    edit: (Edit)
     title: Title
+    edit_permission_denied: "You don't have permission to modify the re-enactment: %{project_title}"
     description: Description
-    create_problem: There was a problem creating a new re-enactment
+    create_problem: There was a problem creating the new re-enactment
     edit_problem: There was a problem editing this re-enactment
   general: 
     thank_you_contact: Thank you for your message.  A member of our team will respond to you shortly.
+    save: Save
     send: Send
+    create: Create
