--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,58 +2,58 @@
 en: 
   items: 
     csv_import_failure: There were some errors while importing the csv file.
+    add: Add new historical event
     location: Location
-    add_character: Add New
-    new_problem: There was a problem adding the event
     character: Historical Figure
-    item_create_success: Item was successfully created.
+    new_problem: There was a problem adding the event
+    add_character: Add New
     wait: Please wait. It can take a few minutes to upload large csv files.
+    item_create_success: Item was successfully created.
     csv_import_success: Successfully imported csv file
-    event_date_time: Date/Time
     content: Event
+    event_date_time: Date/Time
     create_problem: There was a problem creating the new event
     source: Source
     edit_problem: There was a problem editing this event
-    add: Add new historical event
   characters: 
     name: Name
     add: Add a new character
     create_success: Character was successfully created.
-    update_success: Character was successfully updated.
-    create_problem: There was a problem creating the new character
-    bio: Bio
-    edit_problem: There was a problem editing this character
     link_twitter_account: Link Twitter Account
+    update_success: Character was successfully updated.
+    bio: Bio
+    create_problem: There was a problem creating the new character
+    edit_problem: There was a problem editing this character
   contact: 
-    subject_help: A simple statement indicating the nature of your feedback.
     name: "Your name:"
+    subject_help: A simple statement indicating the nature of your feedback.
     name_help: Please provide us with your name.
-    contact_response_subject: Thanks for your inquiry from %{application_name}!
     email_help: Please provide us with your email so that we can contact you if necessary.
+    contact_response_subject: Thanks for your inquiry from %{application_name}!
     subject: "Subject:"
     question_help: Please include any comments you would like us to hear.
-    phone_help: Your phone number is optional but will help us contact you if necessary.
-    phone: "Your phone number:"
     contact_us: Contact Us
+    phone: "Your phone number:"
+    phone_help: Your phone number is optional but will help us contact you if necessary.
     question: "Your message/question:"
     email: "Your email:"
   projects: 
     title: Title
     edit_permission_denied: "You don't have permission to modify the re-enactment: %{project_title}"
-    return_to_project: "<< Return to: %{project_title}"
-    description: Description
     create_problem: There was a problem creating the new re-enactment
+    description: Description
+    return_to_project: "<< Return to: %{project_title}"
     edit_problem: There was a problem editing this re-enactment
   authentications: 
     failure: Could not connect to Twitter account. Please try again.
     already_connected: You've already connected to this Twitter account.
     connect_success: You successfully connected to the Twitter account.
-    delete_success: Twitter account was succesfully unlinked
     no_parent_error: No Character or Schedule was provided. Unable to connect with Twitter account.
+    delete_success: Twitter account was succesfully unlinked
     connect_error: Could not connect to Twitter account. Please try again. %{errors}
   broadcasts: 
-    new_problem: There was a problem adding the broadcast
     create_success: Broadcast was successfully created. Now connect the broadcast to a Twitter account
+    new_problem: There was a problem adding the broadcast
     start_label: Start this broadcast on
     link_twitter_account: Link Twitter Account
     edit_problem: There was a problem editing this broadcast
@@ -69,3 +69,5 @@ en:
     send: Send
     create: Create
     inline_add: (Add)
+    connect_to_twitter_msg: "Connected to Twitter Account: %{twitter_link}"
+    twitter_logout_warning: (Be sure you are logged out of Twitter before performing this step or you will link to whatever account you are logged into).
