--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,7 @@ en:
     csv_import_failure: There were some errors while importing the csv file.
     add: Add new historical event
     location: Location
+    untweeted_count_msg: There are currently %{untweeted_items_count} items from this character that are not tweeted.
     character: Historical Figure
     new_problem: There was a problem adding the event
     add_character: Add New
@@ -19,55 +20,55 @@ en:
     name: Name
     add: Add a new character
     create_success: Character was successfully created.
-    link_twitter_account: Link Twitter Account
     update_success: Character was successfully updated.
-    bio: Bio
+    link_twitter_account: Link Twitter Account
     create_problem: There was a problem creating the new character
+    bio: Bio
     edit_problem: There was a problem editing this character
   contact: 
-    name: "Your name:"
     subject_help: A simple statement indicating the nature of your feedback.
+    name: "Your name:"
     name_help: Please provide us with your name.
-    email_help: Please provide us with your email so that we can contact you if necessary.
     contact_response_subject: Thanks for your inquiry from %{application_name}!
+    email_help: Please provide us with your email so that we can contact you if necessary.
     subject: "Subject:"
     question_help: Please include any comments you would like us to hear.
-    contact_us: Contact Us
-    phone: "Your phone number:"
     phone_help: Your phone number is optional but will help us contact you if necessary.
+    phone: "Your phone number:"
+    contact_us: Contact Us
     question: "Your message/question:"
     email: "Your email:"
   projects: 
     title: Title
     edit_permission_denied: "You don't have permission to modify the re-enactment: %{project_title}"
-    create_problem: There was a problem creating the new re-enactment
-    description: Description
     return_to_project: "<< Return to: %{project_title}"
+    description: Description
+    create_problem: There was a problem creating the new re-enactment
     edit_problem: There was a problem editing this re-enactment
   authentications: 
     failure: Could not connect to Twitter account. Please try again.
     already_connected: You've already connected to this Twitter account.
     connect_success: You successfully connected to the Twitter account.
-    no_parent_error: No Character or Schedule was provided. Unable to connect with Twitter account.
     delete_success: Twitter account was succesfully unlinked
+    no_parent_error: No Character or Schedule was provided. Unable to connect with Twitter account.
     connect_error: Could not connect to Twitter account. Please try again. %{errors}
   broadcasts: 
-    create_success: Broadcast was successfully created. Now connect the broadcast to a Twitter account
     new_problem: There was a problem adding the broadcast
+    create_success: Broadcast was successfully created. Now connect the broadcast to a Twitter account
     start_label: Start this broadcast on
     link_twitter_account: Link Twitter Account
     edit_problem: There was a problem editing this broadcast
   general: 
     delete_confirmation: Are you sure?
-    edit: Edit
     add: Add
+    edit: Edit
     delete: Delete
     thank_you_contact: Thank you for your message.  A member of our team will respond to you shortly.
     follow: Follow
-    save: Save
     inline_edit: (Edit)
-    send: Send
+    save: Save
     create: Create
+    send: Send
+    connected_to_twitter_msg: "Connected to Twitter Account: %{twitter_link}"
     inline_add: (Add)
-    connect_to_twitter_msg: "Connected to Twitter Account: %{twitter_link}"
     twitter_logout_warning: (Be sure you are logged out of Twitter before performing this step or you will link to whatever account you are logged into).
