Added scheduling of tweets

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,6 +61,7 @@ en:
     delete_confirmation: Are you sure?
     add: Add
     edit: Edit
+    update: Update
     delete: Delete
     send_tweets: Transmit these Tweets now
     thank_you_contact: Thank you for your message.  A member of our team will respond to you shortly.
