--- a/README.rdoc
+++ b/README.rdoc
@@ -15,4 +15,10 @@ Together, the separate tweets combine to paint a complete and unique picture of 
 
 TwHistory is funded and supported by Talis[http://www.talis.com/]
 
+== Installation
+TwHistory uses delayed job. Make sure delayed job is running in the background
+
+Broadcasts require rake task to be run as a cron job
+  rake twhistory:broadcast
+
 Copyright (c) 2009-2010 Tatemae[http://www.tatemae.com/], released under the MIT license
